--- a/app/css/style.css
+++ b/app/css/style.css
@@ -149,6 +149,46 @@ a:hover {
   border: 1px solid #ffffff;
 }
 
+.slick-dots {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
+}
+
+.slick-dots li button {
+  -ms-flex-item-align: center;
+      align-self: center;
+  margin-top: 30px;
+  font-size: 0;
+  width: 16px;
+  height: 16px;
+  border-radius: 8px;
+  border: none;
+  background: #24A3FF;
+  opacity: 0.2;
+  margin: 0 7.5px;
+  margin-top: 30px;
+}
+
+.slick-dots li button:hover {
+  opacity: 0.6;
+}
+
+.slick-dots li.slick-active button {
+  opacity: 1;
+}
+
+.slick-initialized .slick-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .gradient-wrapper {
   background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
   position: relative;
@@ -1507,6 +1547,7 @@ a:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding: 30px 0;
 }
 
 .achievements__title {
@@ -1517,7 +1558,7 @@ a:hover {
   letter-spacing: 1px;
   text-transform: uppercase;
   color: #323264;
-  padding: 30px 0;
+  padding-bottom: 30px;
 }
 
 .achievements__list {
@@ -1594,10 +1635,6 @@ a:hover {
 @media screen and (min-width: 648px) {
   .achievements__list {
     margin: 0 -20px;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
   }
   .achievements__list-body {
     padding: 0 20px;
