--- a/app/sass/block/_achievements.scss
+++ b/app/sass/block/_achievements.scss
@@ -3,6 +3,7 @@
     &__body {
         display: flex;
         flex-direction: column;
+        padding: 30px 0;
     }
     &__title{
         font-weight: 700;
@@ -12,7 +13,7 @@
         letter-spacing: 1px;
         text-transform: uppercase;
         color: $main-alt;
-        padding: 30px 0;
+        padding-bottom: 30px;
     }
     &__list {
         display: flex;
@@ -67,7 +68,6 @@
     .achievements {
         &__list {
             margin: 0 -20px;
-            flex-direction: row;
             &-body {
                 padding: 0 20px;
                 width: 25%;
