--- a/app/css/style.css
+++ b/app/css/style.css
@@ -377,6 +377,7 @@ a:hover {
   margin-top: 15px;
   margin-bottom: 10px;
   margin-left: -15px;
+  position: relative;
 }
 
 .header__logo-page {
@@ -423,7 +424,7 @@ a:hover {
 }
 
 .header__list {
-  display: none;
+  display: block;
 }
 
 .header__list-box {
@@ -438,7 +439,13 @@ a:hover {
   background-color: #ffffff;
   padding: 64px 12px 12px;
   border-radius: 12px 12px 0px 0px;
-  position: relative;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  top: 93px;
+  width: 90%;
+  height: 100vh;
 }
 
 .header__list-link {
@@ -601,6 +608,9 @@ a:hover {
     background-image: url(../../img/Slash.svg);
   }
   .header__menu-btn {
+    display: none;
+  }
+  .header__list {
     display: none;
   }
   .header__item {
