--- a/app/sass/block/_body.scss
+++ b/app/sass/block/_body.scss
@@ -1,6 +1,6 @@
 .body {
     background: $supersoft;
-    background-image: url(../../img/body-img.svg);
+    background-image: url(../img/body-img.svg);
     background-repeat: no-repeat;
     background-position: top center;
 }
