--- a/app/sass/block/_first-screen.scss
+++ b/app/sass/block/_first-screen.scss
@@ -1,5 +1,5 @@
 .first-screen {
-    background-image: url(../../img/body-img.svg);
+    background-image: url(../img/body-img.svg);
     background-repeat: no-repeat;
     background-position: top center;
     background-size: 600px;
