--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -44,7 +44,7 @@
     line-height: 20px;
     padding: 18px 30px;
     background: $regular;
-    box-shadow: 0px 0px 20px rgba(36, 163, 255, 0.5);
+    box-shadow: 0 0 20px rgba(36, 163, 255, 0.5);
     border-radius: 12px;
     color: $white;
     transition-duration: 400ms;
@@ -104,7 +104,6 @@ a {
 }
 .slick-dots li button {
     align-self: center;
-    margin-top: 30px;
     font-size: 0;
     width: 16px;
     height: 16px;
