--- a/app/sass/block/_footer.scss
+++ b/app/sass/block/_footer.scss
@@ -45,7 +45,7 @@
             font-size: 16px;
             line-height: 20px;
             text-align: right;
-            color: $main-alt;
+            color: $main-alt2;
             margin: 10px 0;
         }
         &-email {
