--- a/app/sass/block/_it.scss
+++ b/app/sass/block/_it.scss
@@ -30,4 +30,71 @@
             margin-bottom: 60px;
         }
     }
+    &__form {
+        background: $bg;
+        border-radius: 12px;
+        visibility: hidden;
+        opacity: 0;
+        position: absolute;
+        margin-bottom: 60px;
+        width: 650px;
+        max-width: 100%;
+        &-ovarlay {
+            background: $bg;
+        }
+        &-close {
+            position: absolute;
+            border: none;
+            cursor: pointer;
+            background: transparent;
+            padding: 9px;
+            border-radius: 12px;
+            top: 21px;
+            right: 21px;
+            &:hover {
+                background-color: $separator
+            }
+        }
+        &-body {
+            display: flex;
+            flex-direction: column;
+            padding: 30px;
+        }
+        &-title {
+            font-weight: 700;
+            font-size: 30px;
+            line-height: 37px;
+            background: $red-text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            margin-bottom: 30px;
+            margin-right: 50px;
+        }
+
+        &-messages {
+            font-family: 'Montserrat','Arial', sans-serif;
+        }
+        &-secondtitle {
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 17px;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            color: $text;
+            padding-top: 15px;
+        }
+        &-btn {
+            margin-top: 15px;
+            position: relative;
+        }
+
+    }
+    &__form.show {
+        position: relative;
+        visibility: visible;
+        opacity: 1;
+
+    }
 }
