--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -2,6 +2,10 @@
     margin: 0;
     box-sizing: border-box;
 }
+.no-scroll {
+    overflow: hidden;
+    height: 100%;
+}
 ::after,
 ::before {
     box-sizing: border-box;
