--- a/app/css/style.css
+++ b/app/css/style.css
@@ -255,6 +255,7 @@ a:hover {
   grid-template-rows: -webkit-min-content -webkit-min-content;
   grid-template-rows: min-content min-content;
   padding-bottom: 30px;
+  position: relative;
 }
 
 .header__top {
@@ -373,6 +374,7 @@ a:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 15px;
 }
 
 .header__logo {
@@ -427,8 +429,51 @@ a:hover {
   background-color: #5B5B83;
 }
 
+.header__overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #323264;
+  opacity: 0;
+  visibility: hidden;
+  cursor: pointer;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.header__overlay.show {
+  visibility: visible;
+  opacity: 1;
+}
+
 .header__list {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 80px;
+  width: 100%;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.header__list-close {
+  position: absolute;
+  border: none;
+  cursor: pointer;
+  background: transparent;
+  padding: 9px;
+  border-radius: 12px;
+  top: 21px;
+  right: 21px;
+}
+
+.header__list-close:hover {
+  background-color: #E6E6F0;
 }
 
 .header__list-box {
@@ -443,13 +488,6 @@ a:hover {
   background-color: #ffffff;
   padding: 64px 12px 12px;
   border-radius: 12px 12px 0px 0px;
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  top: 93px;
-  width: 90%;
-  height: 100vh;
 }
 
 .header__list-link {
@@ -479,6 +517,11 @@ a:hover {
   height: 32px;
   right: 12px;
   top: 12px;
+}
+
+.header__list.show {
+  visibility: visible;
+  opacity: 1;
 }
 
 .header__item {
