--- a/app/sass/block/_header.scss
+++ b/app/sass/block/_header.scss
@@ -5,6 +5,7 @@
     grid-template-columns: 1fr min-content;
     grid-template-rows:min-content min-content ;
     padding-bottom: 30px;
+    position: relative;
     &__top {
         grid-column: 1 / 3;
         display: flex;
@@ -98,6 +99,7 @@
     &__logos{
         display: flex;
         align-items: center;
+        padding-top: 15px;
     }
     &__logo {
         height: 32px;
@@ -140,8 +142,45 @@
                 }
         }
     }
+    &__overlay {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background-color: $main-alt;
+        opacity: 0;
+        visibility: hidden;
+        cursor: pointer;
+        transition: all .3s ease;
+    }
+    &__overlay.show {
+        visibility: visible;
+        opacity: 1;
+    }
     &__list {
-        display: none;
+        visibility: hidden;
+        opacity: 0;
+        position: absolute;
+        left: 0;
+        top: 80px;
+        width: 100%;
+        transition: all .3s ease;
+        &-close {
+            position: absolute;
+            border: none;
+            cursor: pointer;
+            background: transparent;
+            padding: 9px;
+            border-radius: 12px;
+            top: 21px;
+            right: 21px;
+            &:hover {
+                background-color: $separator
+            }
+        }
             &-box {
                 display: flex;
                 flex-direction: column;
@@ -149,12 +188,7 @@
                 background-color: $white;
                 padding: 64px 12px 12px;
                 border-radius: 12px 12px 0px 0px;
-                position: absolute;
-                left: 50%;
-                transform: translateX(-50%);
-                top: 93px;
-                width: 90%;
-                height: 100vh;
+
             }
             &-link {
                 font-weight: 700;
@@ -183,6 +217,10 @@
                 top: 12px;
             }
         }
+    &__list.show {
+        visibility: visible;
+        opacity: 1;
+    }
     &__item {
         display: none;
         &-link {
