--- a/app/sass/block/_header.scss
+++ b/app/sass/block/_header.scss
@@ -186,9 +186,8 @@
                 flex-direction: column;
                 min-width: 360px;
                 background-color: $white;
-                padding: 64px 12px 12px;
-                border-radius: 12px 12px 0px 0px;
-
+                padding: 60px 12px;
+                border-radius: 12px;
             }
             &-link {
                 font-weight: 700;
@@ -204,18 +203,7 @@
                     color: $regular;
                 }
             }
-            &-btn {
-                background-image: url(../../img/close.svg);
-                background-repeat: no-repeat;
-                position: absolute;
-                border: none;
-                background-color: transparent;
-                font-size: 0;
-                width: 32px;
-                height: 32px;
-                right: 12px;
-                top: 12px;
-            }
+
         }
     &__list.show {
         visibility: visible;
