--- a/app/css/style.css
+++ b/app/css/style.css
@@ -255,7 +255,6 @@ a:hover {
   grid-template-rows: -webkit-min-content -webkit-min-content;
   grid-template-rows: min-content min-content;
   padding-bottom: 30px;
-  position: relative;
 }
 
 .header__top {
@@ -454,9 +453,9 @@ a:hover {
   visibility: hidden;
   opacity: 0;
   position: absolute;
-  left: 0;
+  left: 20px;
+  right: 20px;
   top: 80px;
-  width: 100%;
   -webkit-transition: all .3s ease;
   transition: all .3s ease;
 }
@@ -484,7 +483,7 @@ a:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  min-width: 360px;
+  min-width: 315px;
   background-color: #ffffff;
   padding: 60px 12px;
   border-radius: 12px;
