--- a/app/sass/block/_header.scss
+++ b/app/sass/block/_header.scss
@@ -5,7 +5,6 @@
     grid-template-columns: 1fr min-content;
     grid-template-rows:min-content min-content ;
     padding-bottom: 30px;
-    position: relative;
     &__top {
         grid-column: 1 / 3;
         display: flex;
@@ -164,9 +163,9 @@
         visibility: hidden;
         opacity: 0;
         position: absolute;
-        left: 0;
+        left: 20px;
+        right: 20px;
         top: 80px;
-        width: 100%;
         transition: all .3s ease;
         &-close {
             position: absolute;
@@ -184,7 +183,7 @@
             &-box {
                 display: flex;
                 flex-direction: column;
-                min-width: 360px;
+                min-width: 315px;
                 background-color: $white;
                 padding: 60px 12px;
                 border-radius: 12px;
